[Texture loading & Transform rotation]
Ported over the Texture class and tested it to load an image file from romfs. Works fine.

Tried to rotate and found an issue that glm::quat is not initialised to identity quaternion by default like in the PC implementation.
Simply had to pass the identity values myself in transform's constructor, fixed it up.

Added a new shader for texture usage in romfs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Prerequisites
 *.d
 
+# extra things to ignore (imgs, data files for testing)
+*.png
+build/*
+
 # Compiled Object files
 *.slo
 *.lo
@@ -27,6 +31,6 @@
 *.lib
 
 # Executables
-*.exe
-*.out
-*.app
+*.nro
+*.elf
+*.nacp
